--- a/docker/provision/n8n/n8n-common.env
+++ b/docker/provision/n8n/n8n-common.env
@@ -7,3 +7,7 @@ DB_POSTGRESDB_PASSWORD=${POSTGRES_NON_ROOT_PASSWORD}
 EXECUTIONS_MODE=queue
 QUEUE_BULL_REDIS_HOST=redis
 QUEUE_HEALTH_CHECK_ACTIVE=true
+N8N_DISABLE_PRODUCTION_MAIN_PROCESS=true
+N8N_ENDPOINT_WEBHOOK=webhook
+N8N_ENDPOINT_WEBHOOK_TEST=webhook-test
+WEBHOOK_URL=http://localhost:5677/
