--- a/docker/services/balancer/default.conf
+++ b/docker/services/balancer/default.conf
@@ -1,8 +1,8 @@
 
 upstream webhook {
-  server docker-n8n-webhook-1:5678;
-  server docker-n8n-webhook-2:5678;
-  server docker-n8n-webhook-3:5678;
+  server docker-n8n-webhook-proxy-1:80;
+  server docker-n8n-webhook-proxy-2:80;
+  server docker-n8n-webhook-proxy-3:80;
 }
 
 server {
@@ -11,10 +11,6 @@ server {
 
   location ~ ^/(webhook) {
     proxy_pass http://webhook;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Upstream-Addr $upstream_addr;
   }
-
 }
 
