- Queue Watcher; - readme;

--- a/docker/services/balancer/default.conf
+++ b/docker/services/balancer/default.conf
@@ -3,6 +3,7 @@ upstream webhook {
   server docker-n8n-webhook-proxy-1:80;
   server docker-n8n-webhook-proxy-2:80;
   server docker-n8n-webhook-proxy-3:80;
+  server docker-n8n-webhook-proxy-4:80;
 }
 
 server {
