--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -45,6 +45,8 @@ services:
     restart: always
     volumes:
       - redis:/data
+    ports:
+      - 6379:6379
     healthcheck:
       test: ['CMD', 'redis-cli', 'ping']
       interval: 5s
