--- a/queue/package.json
+++ b/queue/package.json
@@ -14,9 +14,7 @@
   },
   "dependencies": {
     "bull": "4.10.2",
-    "ioredis": "5.2.4",
-    "readline": "1.3.0",
-    "redis": "^4.6.8"
+    "readline": "1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.15.11",
