--- a/docker/services/n8n/n8n-common.env
+++ b/docker/services/n8n/n8n-common.env
@@ -11,3 +11,4 @@ N8N_DISABLE_PRODUCTION_MAIN_PROCESS=true
 N8N_ENDPOINT_WEBHOOK=webhook
 N8N_ENDPOINT_WEBHOOK_TEST=webhook-test
 WEBHOOK_URL=http://localhost:5679/
+N8N_ENCRYPTION_KEY="PW/G9OT1Ud10ZZLGzAPUz9a7Y1FY38rF"
